# simple-cli-app

./: .gitignore  LICENSE  README.md  file-client.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.sh  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: app.py  file-client.py
src/file/7f8b6891-defc-475d-9c67-b8eca4cd23b4/read/: read_people_stats.json
src/file/7f8b6891-defc-475d-9c67-b8eca4cd23b4/stat/: stat_people_stats.json
src/file_client/api/: app.py
src/file_client/api/flask_config/: api_setup.py  flask_setup.py
src/file_client/api/health_resources/: health_check.py
src/file_client/api/read_resources/: read.py
src/file_client/api/stat_resources/: stat.py
src/file_client/commands_manager/: manager.py
src/tests/: test_endpoints.py
