[metadata]
name = file_client
version = 0.0.1
description = Simple CLI application which retrieves, prints and save data from the backend.
author = Martin Sedlák
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    file_client
install_requires =
    Flask>=2
    flask_restful>=0.3
    requests>=2
    python_magic>=0.4
    setuptools>=59
    Click>=8
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    tomli==1.2.3

[options.package_data]
file_client = py.typed

[flake8]
max-line-length = 80